# agent-learn

./: .gitignore  FEYNMAN-UPDATE-SUMMARY.md  FRAMEWORK-COMPARISON.md  NEW-FRAMEWORKS-GUIDE.md  PROGRESS.md  README.md  START_HERE.md  architect-learning-plan.md  feynman-learning-plan.md  pyproject.toml  requirements.txt  senior-dev-learning-plan.md
app/bub/: AGENTS.md  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  CODE_DEEP_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  justfile  mkdocs.yml  pyproject.toml
app/bub/docs/: architecture.md
app/bub/tests/: conftest.py  test_agent_loop.py  test_channels.py  test_cli_interactive.py  test_command_detector.py  test_graceful_shutdown.py  test_router.py  test_runtime_event_loop.py  test_runtime_filters.py  test_skills_loader.py  test_tape_context.py  test_tape_store.py  test_telegram_session_prompt.py  test_tool_registry.py  test_tools_schedule.py
app/openclaw-docs/: README.md
app/skills-agent-proto/: .env.example  pyproject.toml
app/skills-agent-proto/.claude/skills/news-extractor/: article.html
app/skills-agent-proto/coder_file/: README.md  langchain_skills_architecture_analysis.md  langchain_skills_workflow_diagrams.md  quick_reference.md
app/skills-agent-proto/src/langchain_skills/: agent.py
plan/: architect-learning-plan.md  feynman-learning-plan.md  feynman-mentor-learning-plan.md  senior-dev-learning-plan.md  testing-expert-learning-plan.md  testing-learning-plan.md
study/: CURRICULUM-MAPPING.md  README.md  STYLE-GUIDE.md
study/level0/: CODE_CHECK_REPORT.md  EXERCISES_GUIDE.md  FINAL_STATUS.md  INSTALL.md  LEVEL0_COMPLETE.md  LEVEL0_FINAL_COMPLETE.md  NOTES_EXAMPLES_MAPPING.md  PROGRESS.md  QUICKSTART.md  README.md
study/level0/checklists/: completion.md
study/level0/examples/: 00_hello_agent.py  01_simple_react_agent.py  02_agent_with_tools.py  03_agent_vs_chatbot.py  04_state_management.py  05_failure_handling.py  06_environment_check.py  07_langchain_basics.py  08_first_agent.py
study/level0/exercises/: 00_concept_check.md  01_basic_practice.md  02_agent_vs_chatbot_exercise.md  03_state_feedback_exercise.md  04_toolbox_exercise.md  05_failure_modes_exercise.md  06_environment_check_exercise.md  README.md
study/level0/notes/: 00_agent_meaning.md  01_react_loop_basics.md  02_agent_vs_chatbot.md  03_state_and_feedback.md  04_toolbox_minimum_set.md  05_failure_modes_basics.md  06_environment_check_guide.md  07_langchain_basics.md  08_langchain_js_basics.md  README.md
study/level0/projects/: 00_hello_project.md  01_capstone_project.md  README.md
study/level1/: FINAL_STATUS.md  LEVEL1_COMPLETE.md  NOTES_COMPLETE.md  PROGRESS.md  README.md  SKILLS_SUPPLEMENT_REPORT.md
study/level1/checklists/: completion.md
study/level1/examples/: 01_complete_react_agent.py  02_multi_tool_agent.py  03_stategraph_basics.py  04_node_design.py  05_edge_routing.py  08_agent_skills_implementation.py
study/level1/exercises/: 01_architecture_exercises.md  02_practice_exercises.md  03_challenge_projects.md  README.md
study/level1/notes/: 01_single_agent_architecture.md  01_stategraph_basics.md  02_node_design_and_boundaries.md  02_tool_development_practice.md  03_edge_routing_patterns.md  04_tool_calling_contracts.md  04_unit_testing_mock.md  05_retry_and_error_handling.md  06_memory_basics_short_term.md  07_debugging_and_observability_basics.md  08_agent_skills_deep_dive.md  09_mcp_tools_guide.md  README.md
study/level1/projects/: 01_single_agent_project.md  README.md
study/level2/: CONTENT_SUMMARY.md  PROGRESS.md  QUICK_START.md  README.md  STATUS.md
study/level2/checklists/: completion.md
study/level2/examples/: 01_planner_agent.py  02_task_decomposition.py  03_memory_system.py  04_reasoning_comparison.py  05_testing_examples.py
study/level2/exercises/: 01_basic_exercises.md  02_intermediate_exercises.md  03_challenge_projects.md  README.md
study/level3/: COMPLETION_REPORT.md  PROGRESS.md  README.md  STATUS.md
study/level4/: PROGRESS.md  README.md
study/level5/: FINAL_STATUS.md  PROGRESS.md  README.md  STATUS.md
study/level6/: FINAL_STATUS.md  PROGRESS.md  README.md
study/level7/: README.md
(+140 files in other folders)
