[project]
name = "langchain-skills-agent"
version = "0.1.0"
description = "使用 LangChain 构建的能发现和使用 Skills 的 Coding Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    # LangChain 1.0 Skills Agent 依赖
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # GLM API 代理支持
    "socksio>=1.0.0",
    # Skills 依赖（news-extractor 需要）
    "demjson3>=3.0.0",
    "parsel>=1.9.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "curl-cffi>=0.5.0",
    "tenacity>=8.0.0",
    "beautifulsoup4>=4.12.0",
    "soupsieve>=2.0",
]

[project.scripts]
langchain-skills = "langchain_skills.cli:main"
langchain-skills-web = "langchain_skills.web_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_skills"]

[tool.uv.sources]
langchain-skills-agent = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
